[project]
name = "rodhaj"
version = "0.3.1"
description = "Transprogrammer's custom modmail bot"
authors = ["No767 <73260931+No767@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = [
    "async-lru==2.0.4,<3",
    "asyncpg==0.30.0,<1",
    "click==8.1.7,<9",
    "discord-ext-menus",
    "discord-py[speed]==2.4.0,<3",
    "humanize==4.11.0,<5",
    "jishaku==2.6.0,<3",
    "msgspec==0.18.6,<1",
    "parsedatetime==2.6,<3",
    "prometheus-async==22.2.0,<23",
    "prometheus-client==0.21.0,<1",
    "psutil==6.1.0,<7",
    "pygit2==1.15.1,<2",
    "python-dateutil==2.9.0.post0,<3",
    "pyyaml==6.0.2,<7",
    "typing-extensions==4.12.2,<5",
    "uvloop==0.21.0,<1 ; sys_platform != 'win32'",
    "watchfiles==0.24.0,<1",
    "winloop==0.1.6,<2 ; sys_platform == 'win32'",
]

[dependency-groups]
dev = [
    "lefthook==1.8.2,<2",
    "pyright==1.1.386,<2",
    "ruff==0.7.1,<1",
    "tox==4.23.2,<5",
]
docs = [
    "furo==2024.8.6,<2025",
    "sphinx-autobuild==2024.10.3,<2025",
    "sphinx-copybutton==0.5.2,<1",
    "sphinx==7.4.7,<8",
]


[tool.uv]
package = false

[tool.uv.sources]
discord-ext-menus = { git = "https://github.com/Rapptz/discord-ext-menus", rev = "8686b5d1bbc1d3c862292eb436ab630d6e9c9b53" }

[tool.pyright]
include = ["bot/**"]
exclude = [
    "**/__pycache__", 
    "**/.mypy_cache", 
    "**/.dmpypy.json", 
]
reportMissingImports = true
typeCheckingMode = "basic"
reportUnnecessaryTypeIgnoreComment = "warning"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
ignore = [
    "E501", 
    "N999", 
    "E402", 
    "S311", 
    "ASYNC109",
    
    # These are recommended by Ruff if the formatter is to be used: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002"
    ]
select = ["E", "F", "N", "ASYNC", "S", "ERA"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
docstring-code-format = true
