[tool.poetry]
name = "rodhaj"
version = "0.3.1"
description = "Transprogrammer's custom modmail bot"
authors = ["No767 <73260931+No767@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4"
discord-py = {extras = ["speed"], version = "^2.4.0"}
uvloop = {markers = "sys_platform != \"win32\"", version = "^0.21.0"}
winloop = {markers = "sys_platform == \"win32\"", version = "^0.1.7"}
asyncpg = "^0.30.0"
discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus", rev = "8686b5d1bbc1d3c862292eb436ab630d6e9c9b53"}
psutil = "^6.1.0"
pygit2 = "^1.15.1"
python-dateutil = "^2.9.0"
click = "^8.1.7"
async-lru = "^2.0.4"
jishaku = "^2.6.0"
pyyaml = "^6.0.2"
watchfiles = "^1.0.0"
typing-extensions = "^4.12.2"
prometheus-client = "^0.21.1"
prometheus-async = "^22.2.0"
parsedatetime = "^2.6"
humanize = "^4.11.0"
msgspec = {git = "https://github.com/jcrist/msgspec", rev = "595c33c4a71c6d0c539b82233982a65819e240cf"}


[tool.poetry.group.dev.dependencies]
lefthook = "^1.9.2"
pyright = "^1.1.390"
ruff = "^0.8.3"
tox = "^4.23.2"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.4.7"
sphinx-copybutton = "^0.5.2"
furo = "^2024.8.6"

[tool.pyright]
include = ["bot/**"]
exclude = [
    "**/__pycache__", 
    "**/.mypy_cache", 
    "**/.dmpypy.json", 
]
reportMissingImports = true
typeCheckingMode = "basic"
reportUnnecessaryTypeIgnoreComment = "warning"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = [
    "E501", 
    "N999", 
    "E402", 
    "S311", 
    "ASYNC109",
    
    # These are recommended by Ruff if the formatter is to be used: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002"
    ]
select = ["E", "F", "N", "ASYNC", "S", "ERA", "I"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
docstring-code-format = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
